Updated iConomy.yml to signify that SQLite is no longer supported. If used SQLite will load h2.

--- a/src/default/iConomy.yml
+++ b/src/default/iConomy.yml
@@ -32,7 +32,7 @@ System:
         # How much maximum money do they get per interval
         MaximumPerInterval: 2
     Database:
-        # Can be MySQL, or SQLite
+        # Can be MySQL, or H2SQL
         Type: SQLite
         # Name of the database
         Name: minecraft
