Updated default files with new message / constants.

--- a/src/default/Messages.yml
+++ b/src/default/Messages.yml
@@ -52,6 +52,12 @@ statistics:
     accounts: "<gray>Total Accounts: <white>+amount"
 
 ##
+# Interest Message
+##
+interest:
+    announcement: "+amount <green>interest gained."
+
+##
 # Account Creation
 ##
 accounts:
