--- a/src/resources/Template.yml
+++ b/src/resources/Template.yml
@@ -81,5 +81,6 @@ accounts:
 error:
     online: "<rose>Sorry, nobody else is online."
     exists: "<rose>Account already exists."
+    create: "<rose>Could not create account with the name <white>+name<rose>."
     account: "<rose>Player <white>+name<rose> does not have account."
     funds: "<rose>Sorry, you do not have enough funds to do that."
