--- a/src/resources/Config.yml
+++ b/src/resources/Config.yml
@@ -1,84 +1,85 @@
-# iConomy 5.0
-# %author     Nijikokun <nijikokun@gmail.com>
-# %license    GPLv2
-# %copyright  Copyright AniGaiku LLC (C) 2010-2011
+# iConomy 6.0
+# @author     Nijikokun <nijikokun@gmail.com>
+# @license    GPLv2
+# @copyright  Copyright AniGaiku LLC (C) 2010-2011
 ##
 # Setup Notes
-#   - Default
-#     This node consists of all the 'default' data.
-#   - Formatting
-#     Allows you to control the output of how you will
-#     see the currency in-game with the major/minor features.
-#   - Banking
-#     Allows users to store money in a seperate location as
-#     well as transfer from bank to bank between users
-#     - Multiple
-#       Allows users to create multiple accounts with banks
-#     - Q & A
-#       Q: Why?
-#       A: Money on hand can be lost, money in banks should not
-#           be altered upon plugin specifictions in iConomy 5.0
-#   - Interest amount is done in seconds.
-#     - Online
-#       If only true, only one bank / account will recieve money for that player.
-#       If only false, it will go through each bank / account and deposit money.
-#     - Announce
-#       Sends message each time a player recieves money.
-#     - Amount
-#       - On
-#         Each time interest runs you can either deposit the money into a bank (Interest)
-#         or directly into a players holdings (Wage).
-#     - Interval
-#       - Seconds
+#   - Seconds
 #         Basic Table:
 #           1 minute = 60 seconds
 #           1 hour = 1 minute * 60 = 3600 seconds
 #           1 day = 1 hour * 24 = 86400 seconds
 #           1 week = 1 day * 7 = 604800 seconds
 #   - Database
-#     - Type
-#       Can only be h2 or MySQL, no longer supports SQLite.
-#     - Settings
-#       If you choose h2, only the first two are needed, do not alter MySQL.
-#       - MySQL
-#         Do not use remote databases from free sites, please use either a
-#          remote database from a personal hosted VPS or DEDI or a local
-#          database. This will prevent any 'timeout' or 'invalid settings'
-#          or 'cannot connect to database' issues. Thank you :)!
+#           Do not use remote databases from free sites, please use either a
+#            remote database from a personal hosted VPS or DEDI or a local
+#            database. This will prevent any 'timeout' or 'invalid settings'
+#            or 'cannot connect to database' issues. Thank you :)!
 ##
 
 System:
   Default:
     Currency:
+      # Major is the first segment [Major].Minor
       Major: [ 'Dollar', 'Dollars' ]                # Major ([Major].Minor) 1.00 Dollar (With Seperate 1 Dollar)
       Minor: [ 'Coin', 'Coins' ]                    # Minor (Major.[Minor]) 0.23 Coins  (With Seperate 0 Dollars, 23 Coins)
 
     Account:
-      Holdings: 30.0                            # Default holdings on hand upon join / creation.
+      # Default account balance when created
+      Holdings: 30.0
 
+  # Controls how money is formatted through methods
   Formatting:
-    Minor: false                                  # Example (true) 0.23 Coins and 1.23 Dollars (false) 0.23 Dollars and 1.23 Dollars
+    # Minor allows you to use the Minor amounts for amounts <1
+    # Example (true) 0.23 Coins and 1.23 Dollars (false) 0.23 Dollars and 1.23 Dollars
+    Minor: false
+
+    # Seperate allows your money to be shown in an alternative way,
+    # instead of 1.32 it will show as 1 Dollar 23 Coins
+    # !!! NOTICE: This only works if Minor is set to true !!!
     Seperate: false                               # Example (true) 1 Dollar, 23 Coins (false) 1.23 Dollars (Only if Minor is true)
 
-  Logging:
-    Enabled: false                                # Logs transactions done inside iConomy only, other plugins must utilize the api. (Logs to SQL)
+    # Single shows your money in another alternative way.
+    # Instead of 1.23 Dollars you will see: 1 Dollar.
+    # If your money is 0.23 you will see 0 Dollars if Minor is false, 23 Coins if Minor is true.
+    # !!! Notice: This overrides seperate !!!
+    Single: false
 
+  # Logs all monetary transactions passed through iConomy
+  Logging:
+    Enabled: false
+
+  # Controls amount of money gained at a set interval.
   Interest:
     Enabled: false
-    Online: true                                  # Only give to players who are online?
+
+    # Only give interest to players who are currently online?
+    Online: true
 
     Announce:
+      # Send a message when the player gains interest?
       Enabled: false
 
     Interval:
+      #  Interval is done in seconds, here is a easy reference table for commonly set intervals:
+      #   1 minute = 60 seconds
+      #   1 hour = 1 minute * 60 = 3600 seconds
+      #   1 day = 1 hour * 24 = 86400 seconds
+      #   1 week = 1 day * 7 = 604800 seconds
       Seconds: 60
 
     Amount:
-      Cutoff: 0.0                               # Amount limit to be met until we stop giving interest. (0.0 for no limit)
-      On: 'Players'                             # Banks or Players
-      Percent: 0.0                              # Percent of holdings to give / take (Negative to take) (Overrides Min/Max)
-      Maximum: 1                                # (Range) Maximum amount for random in between. (Make Max/Min equal for a flat-rate amount ie: 5/5)
-      Minimum: 2                                # (Range) Minimum amount for random in between.
+      # The balance to be met where we stop giving interest.
+      # 0.0 for no limit
+      Cutoff: 0.0
+
+      # Percentage of holdings to give / take (Negative to take) (Overrides Min/Max)
+      Percent: 0.0
+
+      # This is range based, to set a "flat" or "constant" rate, set each (Maximum and Minimum) to the same number.
+      # If the two numbers are different, it will be a random amount in-between the two.
+      Maximum: 1
+      Minimum: 2
 
   Database:
     # Databases Supported:
