--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,13 +1,13 @@
 # General Data
 name: iConomy
 main: com.iCo6.iConomy
-version: 6.0.5b
+version: 6.0.6b
+
+# Command Data
 commands:
     money:
       aliases: [iConomy, iCo]
       description: Check / Distrobute currency.
-      permission: iConomy.holdings
-      usage:
 
 # Generator Data
 generators: [bukget]
