--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,13 +1,13 @@
 # General Data
 name: iConomy
 main: com.iCo6.iConomy
-version: 6.0.9b
+version: 6.0.10b
 
 # Command Data
 commands:
     money:
       aliases: [iConomy, iCo]
-      description: Check / Distrobute currency.
+      description: Distrobute, Check, Use Currency.
 
 # Generator Data
 generators: [bukget]
